--- a/template (1).Rmd
+++ b/template (1).Rmd
@@ -1,21 +1,16 @@
 ---
 title: "Simple document"
-output: html_document
+output: github_document
+
 ---
 
-I'm an R Markdown document! 
-
-# Section 1
-
-Here's a **code chunk** that samples from 
-a _normal distribution_:
-
+Let's import the `FAS_litters.csv` CSV
 ```{r}
-samp = rnorm(100)
-length(samp)
+library(tidyverse)
+litters_df = 
+  read_csv("data/data_import_examples/FAS_litters.csv")
+
+litters_df =
+  janitor::clean_names(litters_df)
 ```
 
-# Section 2
-
-I can take the mean of the sample, too!
-The mean is `r mean(samp)`.
